--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     image: postgres
   basketdb:
     image: postgres
+  distributedcache:
+    image: redis
 
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
@@ -10,6 +12,13 @@ services:
       context: .
       dockerfile: src/Services/Catalog/Catalog.API/Dockerfile
 
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: src/Services/Basket.API/Dockerfile
+
 volumes:
   postgres_catalog:
   postgres_basket:  
+
