done implementing discount grpc service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,14 @@ services:
       context: .
       dockerfile: src/Services/Basket.API/Dockerfile
 
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discountgrpc
+    build:
+      context: .
+      dockerfile: src/Services/Discount.Grpc/Dockerfile
+
 volumes:
   postgres_catalog:
   postgres_basket:  
+
 
