--- a/src/Services/Ordering.Application/Ordering.Application.csproj
+++ b/src/Services/Ordering.Application/Ordering.Application.csproj
@@ -11,4 +11,11 @@
     <ProjectReference Include="..\Ordering.Domain\Ordering.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Orders\Commands\" />
+    <Folder Include="Orders\Eventhandlers\" />
+    <Folder Include="Orders\Queries\" />
+  </ItemGroup>
+
 </Project>
