--- a/src/Services/Ordering.Application/Ordering.Application.csproj
+++ b/src/Services/Ordering.Application/Ordering.Application.csproj
@@ -12,10 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Orders\Commands\" />
     <Folder Include="Orders\Eventhandlers\" />
     <Folder Include="Orders\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
   </ItemGroup>
 
 </Project>
