--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     image: redis
   orderdb:
     image: mcr.microsoft.com/mssql/server
+  messagebroker:
+    image: rabbitmq:management
 
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
@@ -26,8 +28,15 @@ services:
       context: .
       dockerfile: src/Services/Discount.Grpc/Dockerfile
 
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+      context: .
+      dockerfile: src/Services/Ordering.API/Dockerfile
+
 volumes:
   postgres_catalog:
   postgres_basket:  
+
 
 
